src/objects/peer__License_Info__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This is mapped with License Custom Field</description>
    <fields>
        <fullName>peer__Internal_Organization_Name__c</fullName>
        <description>internal organization name to be mapped with actual organization nsmr</description>
        <label>Internal Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Market_Place_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Place Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Market_Place_Expiration_Date__c</fullName>
        <label>Market Place Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Notify_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Notify_Expiration_Date__c</fullName>
        <description>expiration date of the notify license</description>
        <label>Notify Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Organization_Id__c</fullName>
        <description>Id representing the organization to which the license belongs</description>
        <label>Organization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>License Info</label>
</CustomObject>